--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,16 @@
-name: algorithm review
+name: gpt algorithm mentor
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  write_ai_comment:
+  write_comment:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - uses: choam2426/GPT-algorithm-code-review@main
+      - uses: choam2426/GPT-algorithm-code-review@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
