--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,19 @@
-name: gpt algorithm mentor
+name: 🤖 AI Algorithm Mentor
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  write_comment:
+  ai-review:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - uses: choam2426/AI-Algorithm-Mentor@v3
+      - uses: choam2426/AI-Algorithm-Mentor@main
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LLM_PROVIDER: openai              # openai, google, anthropic
+          LLM_MODEL: gpt-4o                 # 모델명 (선택사항)
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          REVIEW_LANGUAGE: korean           # korean, english, etc..
