Update AI Algorithm Mentor action version and model

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
       contents: write
     steps:
       - name: call AI Algorithm Mentor
-        uses: choam2426/AI-Algorithm-Mentor@main
+        uses: choam2426/AI-Algorithm-Mentor@feature/#8
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LLM_PROVIDER: openai              # openai, google, anthropic
-          LLM_MODEL: gpt-4o                 # 모델명 (선택사항)
+          MODEL_NAME: gpt-5.1                 # 모델명 (선택사항)
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           REVIEW_LANGUAGE: korean           # korean, english, etc..
